--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -13,6 +13,7 @@ body {
   padding: 0;
   color: #222;
   line-height: 1.6;
+  font-size: 14px;
 }
 
 h1,
