--- a/src/styles/_table.scss
+++ b/src/styles/_table.scss
@@ -28,7 +28,7 @@ $table-row-hover-bg: #fefce8;
   border-bottom: 1px solid $table-border-color;
   border-right: 1px solid $table-border-color;
   transition: background-color 0.2s ease-in-out;
-  white-space: nowrap;
+  white-space: pre;
 
   &:last-child {
     border-right: none;
